--- a/p8105_hw5_yz4720.md
+++ b/p8105_hw5_yz4720.md
@@ -3,3 +3,91 @@ p8105_hw5_yz4720
 Jasmine Zhang
 2023-11-15
 
+# Problem 1
+
+### Homicide dataset
+
+``` r
+homicide_df = 
+  read_csv("data/homicide-data.csv", na = c("", "NA", "Unknown"))|> 
+  mutate(
+    city_state = str_c(city, state, sep = ", "),
+    resolution = case_when(
+      disposition == "Closed without arrest" ~ "unsolved",
+      disposition == "Open/No arrest"        ~ "unsolved",
+      disposition == "Closed by arrest"      ~ "solved"))|>  
+  filter(city_state != "Tulsa, AL") 
+```
+
+    ## Rows: 52179 Columns: 12
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (8): uid, victim_last, victim_first, victim_race, victim_sex, city, stat...
+    ## dbl (4): reported_date, victim_age, lat, lon
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+The tidy dataset has 52178 observations. Variables include the victim
+name, race, age, and sex; the date the homicide was reported; and the
+location of the homicide. `city_state` variable is created that includes
+both city and state, and a `resolution` variable is created to indicate
+whether the case was closed by arrest. The one entry in Tulsa, AL is
+excluded because it is not a major US city and is most likely a data
+entry error.
+
+### Homicide status by city
+
+``` r
+city_homicide_df = 
+  homicide_df %>% 
+  select(city_state, disposition, resolution) %>% 
+  group_by(city_state) %>% 
+  summarize(
+    hom_total = n(),
+    hom_unsolved = sum(resolution == "unsolved"))
+```
+
+### Baltimore: unsolved homicide estimation
+
+``` r
+bmore_test = 
+  prop.test(
+    x = filter(city_homicide_df, city_state == "Baltimore, MD") %>% pull(hom_unsolved),
+    n = filter(city_homicide_df, city_state == "Baltimore, MD") %>% pull(hom_total)) 
+
+broom::tidy(bmore_test) 
+```
+
+    ## # A tibble: 1 × 8
+    ##   estimate statistic  p.value parameter conf.low conf.high method    alternative
+    ##      <dbl>     <dbl>    <dbl>     <int>    <dbl>     <dbl> <chr>     <chr>      
+    ## 1    0.646      239. 6.46e-54         1    0.628     0.663 1-sample… two.sided
+
+### All cities: unsolved homicide estimation
+
+``` r
+test_results = 
+  city_homicide_df %>% 
+  mutate(
+    prop_tests = map2(hom_unsolved, hom_total, \(x, y) prop.test(x = x, n = y)),
+    tidy_tests = map(prop_tests, broom::tidy)) %>% 
+  select(-prop_tests) %>% 
+  unnest(tidy_tests) %>% 
+  select(city_state, estimate, conf.low, conf.high) %>% 
+  mutate(city_state = fct_reorder(city_state, estimate))
+```
+
+``` r
+test_results %>% 
+  mutate(city_state = fct_reorder(city_state, estimate)) %>% 
+  ggplot(aes(x = city_state, y = estimate)) + 
+  geom_point() + 
+  geom_errorbar(aes(ymin = conf.low, ymax = conf.high)) + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
+
+<img src="p8105_hw5_yz4720_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
+
+Chicago has the highest proportion of unsolved homicides among all the
+cities.
